# open-audio-opd

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: hostfile.example  qwen3_asr_teacher.example.yaml  single_node.example.yaml  toy_smoke.yaml  toy_train.jsonl
docs/: adapters.md  ark_asr_vllm_adaptation.md  checkpoint_export.md  training.md
scripts/eval/: eval_jwer_ark_asr_transformers.py  run_arkasr_eval.sh
scripts/infer/: ark_asr_transformers.py
scripts/run/: run_ark_asr_opd_fsdp2_resume_hostfile.sh
scripts/train/: train_ark_asr_opd_fsdp2_resume.py
scripts/vllm/: deploy_ark_asr_vllm_service.sh  run_ark_asr_vllm_service.sh
scripts/vllm/ark_asr_vllm/: __init__.py  config.py  config_parser.py  local_hf.py  modeling.py  register.py  service.py
src/open_audio_opd/: __init__.py  __main__.py  cli.py  config.py  data.py  losses.py  registry.py  types.py
src/open_audio_opd/adapters/: __init__.py  base.py  toy.py
src/open_audio_opd/training/: __init__.py  loop.py
tests/: test_config_data.py  test_loss.py  test_smoke.py
tools/: ark_asr_vllm_test.html
verl/verl/workers/: fsdp_workers.py
