[project]
name = "open-audio-opd"
version = "0.1.0"
description = "Clean-room audio online policy distillation framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "open-audio-opd contributors" }]
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
open-audio-opd = "open_audio_opd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
