[project]
name = "open-audio-opd"
version = "0.1.0"
description = "Clean-room audio online policy distillation framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "open-audio-opd contributors" }]
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.3",
  "datasets>=2.18",
  "omegaconf>=2.3",
  "transformers>=4.51",
  "accelerate",
  "codetiming",
  "dill",
  "hydra-core",
  "numpy<2.0.0",
  "pandas",
  "peft",
  "pyarrow>=19.0.0",
  "pybind11",
  "pylatexenc",
  "torchdata",
  "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
  "packaging>=20.0",
  "tensorboard",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]
vllm = [
  "vllm>=0.8.5,<=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
artifacts = [
  "scripts",
  "verl",
  "configs",
  "README.md",
  "README_zh.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
